# benchly

./: .gitignore  README.md  pyproject.toml  steps.rtf  steps.txt
benchly/: db.sqlite3  manage.py
benchly/benchly/: asgi.py  settings.py  urls.py  wsgi.py
benchly/benchlysite/: urls.py  wsgi.py
benchly/my_app/: models.py  views.py
benchly/my_app/migrations/: 0001_initial.py
benchly/templates/: climate_model_outputs.txt  home.html
benchlysite/: db.sqlite3
benchlysite/benchly/: admin.py  apps.py  models.py  urls.py  views.py
benchlysite/benchly/migrations/: 0001_initial.py  0002_rename_inputs_climinputs_rename_outputs_climoutputs.py  0002_timeseriesvar_timeseries_display_and_more.py  0003_alter_climoutputs_scenario.py  0004_alter_display_year.py
benchlysite/benchly/static/: style.css
benchlysite/benchly/templates/: climate_model_inputs.txt  home.html
benchlysite/benchly/templates/benchly/: detail.html  display.html  index.html  name.html  results.html  template.css  timeseries.html  timeseries_results.html
benchlysite/benchlysite/: asgi.py  settings.py  urls.py
benchlysite/my_app/: models.py  views.py
benchlysite/my_app/migrations/: 0002_rename_inputs_climinputs_rename_outputs_climoutputs.py
benchlysite/scripts/: load_inputs.py  load_outputs.py
benchlysite/templates/: climate_model_inputs.txt  climate_model_outputs.txt  dummy2.txt  dummy4.txt  home.html
