[tool.poetry]
name = "benchly"
version = "0.1.0"
description = ""
authors = ["Penny Rowe <1795738+prowe12@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"
plotly = "^5.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
